--- a/WebClient Anbar e Sazemanha/App.config
+++ b/WebClient Anbar e Sazemanha/App.config
@@ -5,11 +5,11 @@
     </startup>
   <appSettings>
     <add key="AuthToken" value=""/>
-    <add key="baseUrl" value="https://pub-cix.ntsw.ir/"/>
+    <add key="baseUrl" value="http://localhost:7705/"/>
     <add key="path" value=""/>
-    <add key="authTokenFilePath" value="D:\Projects\Anbar e Sazemanha\WebClient Anbar e Sazemanha\WebClient Anbar e Sazemanha/authtoken.txt"/>
+    <add key="authTokenFileName" value="authtoken.txt"/>
     <add key="basicAuthUser" value="mr_yaboo1@yahoo.com"/>
-    <add key="basicAuthPassword" value="www"/>
+    <add key="basicAuthPassword" value="password"/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
